--- a/Comfizen/Comfizen.csproj
+++ b/Comfizen/Comfizen.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="FFME.Windows" Version="4.4.350" />
     <PackageReference Include="FFmpeg.AutoGen" Version="4.4.1.1" />
     <PackageReference Include="Hst.Imaging.Pngcs" Version="0.4.61" />
+    <PackageReference Include="IronPython" Version="3.4.2" />
     <PackageReference Include="Markdig.Wpf" Version="0.5.0.1" />
     <PackageReference Include="MetadataExtractor" Version="2.8.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
