--- a/Comfizen/Comfizen.csproj
+++ b/Comfizen/Comfizen.csproj
@@ -36,6 +36,7 @@
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.2" />
     <PackageReference Include="TagLibSharp" Version="2.3.0" />
+    <PackageReference Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
 
   <ItemGroup>
